Allow setting the related DTO retrieval strategy config in Spring Boot properties
Documentation updated