@@ -39,6 +39,7 @@
                         --add-opens litebridge.spring.boot.autoconfigure/org.litebridgedb.spring.boot.autoconfigure.test.mapping=spring.beans
                         --add-opens litebridge.spring.boot.autoconfigure/org.litebridgedb.spring.boot.autoconfigure.test.mapping=litebridge.orm
                         --add-opens litebridge.spring.boot.autoconfigure/org.litebridgedb.spring.boot.autoconfigure.test.entity=litebridge.orm
+                        --add-opens litebridge.orm/org.litebridgedb.orm=litebridge.spring.boot.autoconfigure
                     </argLine>
                 </configuration>
             </plugin>
